--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://127.0.0.1:3306/user?useUnicode=true&characterEncoding=utf-8
+url=jdbc:mysql://127.0.0.1:3306/brainstorm?useUnicode=true&characterEncoding=utf-8
 user=root
-password=pass
-driver=com.mysql.jdbc.Driver
+password=password
+driver=com.mysql.cj.jdbc.Driver
